[package]
name = "rev-studio"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rev-studio-arch-x86_64 = { path = 'modules/arch-x86_64' }
rev-studio-arch-pvm = { path = 'modules/arch-pvm' }
rev-studio-fmt-elf = { path = 'modules/fmt-elf' }
rev-studio-fmt-pyc = { path = 'modules/fmt-pyc' }
rev-studio-gui-curses = { path = 'modules/gui-curses' }
rev-studio-lang-rust = { path = 'modules/lang-rust' }
rev-studio-lang-python = { path = 'modules/lang-python' }
