[package]
name = "rev-studio-c"
version = "0.1.0"
authors = ["Solly <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at http../..//doc.rust-lang.o../../car../../referen../../manifest.html

[dependencies]
[dependencies.rev-studio-interface]
path = '../../rev-studio-interface'
