[package]
name = "rev-studio-arch-pvm"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rev-studio-fmt-pyc = { path = '../fmt-pyc' }
bitflags = "1.2"
num-traits = "0.2"
num-derive = "0.3"
pyo3 = "0.9"
