[package]
name = "rev-studio-lang-python"
version = "0.1.0"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rev-studio-arch-pvm = { path = '../arch-pvm' }
num-bigint = "0.3"
generic-array = "0.14.3"
typenum = "1.12.0"
arrayvec = "0.5.1"
lazy_static = "1.4.0"
